Add a few string algorithms, plus tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,13 +5,12 @@
 project(tests)
 
 add_executable(${PROJECT_NAME}
-  functional/test_simple.cpp
-  future/test_simple.cpp
   main.cpp
   string/test_cp437.cpp
   string/test_iso8859_15.cpp
   string/test_iso8859_1.cpp
   string/test_simple.cpp
+  string/test_substr_view.cpp
   string/test_ucs2.cpp
   string/test_utf16.cpp
   string/test_utf32.cpp
@@ -21,7 +20,16 @@ add_executable(${PROJECT_NAME}
   string/test_wtf8.cpp
   vector/test_simple.cpp
 )
+
 target_include_directories(${PROJECT_NAME}
   PRIVATE
     ../include
 )
+
+add_custom_command(
+  OUTPUT ${PROJECT_NAME}.testresult 
+  COMMAND ./${PROJECT_NAME} >${PROJECT_NAME}.testresult || cat ${PROJECT_NAME}.testresult
+  DEPENDS ${PROJECT_NAME}
+)
+
+add_custom_target(${PROJECT_NAME}.testrun DEPENDS ${PROJECT_NAME}.testresult)
